# the-mind

./: .gitattributes  .gitignore  README.md  readme.txt  todo.txt
Documents/: Conception.vpp  RapportFinal.docx  RapportPreliminaire.docx
TheMind/: CMakeLists.txt
TheMind/BotProject/: CMakeLists.txt  bot.c  bot.h  handlers.c  logic.c  logic.h  main.c  socket.c  socket.h
TheMind/ClientProject/: CMakeLists.txt  client.c  client.h  handlers.c  input.c  input.h  main.c  main.h  socket.c  socket.h  utils.c  utils.h
TheMind/ClientProject/Logic/: joueur.c  joueur.h  lobby.c  lobby.h  partie.c  partie.h
TheMind/ClientProject/Logic_/: lobby.h
TheMind/Docs/: ClientProject.cfg  Doxyfile_BotProject  Doxyfile_ClientProject  Doxyfile_ServerProject  Doxyfile_Shared  ServerProject.cfg  Shared.cfg  run_doxygen.bat  run_doxygen.sh
TheMind/Libs/: CMakeLists.txt
TheMind/ServerProject/: CMakeLists.txt  handlers.c  joueur.c  lobby.c  lobby.h  main.c  mind.c  partie.c  partie.h  server.c  server.h  socket.c  socket.h  utils.h
TheMind/ServerProject/Logic/: joueur.c  joueur.h  lobby.c  lobby.h  mind.h  partie.c  partie.h  stats.c  stats.h
TheMind/ServerProject/Logic_/: partie.c
TheMind/ServerProject/logic/: joueur.c
TheMind/ServerProject/template/: generate_latex.awk  generate_pdf.sh  template.tex
TheMind/Shared/: CMakeLists.txt  utils.c  utils.h
TheMind/Shared/messaging/: cli_handlers.h  enums.h  srv_handlers.h  structs.h
TheMind/Shared/socket/: consts.h  utils_io.h
src/: CMakeLists.txt
src/BotProject/: CMakeLists.txt  logic.h  socket.c  socket.h
src/ClientProject/: CMakeLists.txt  main.c  socket.c  socket.h
src/ClientProject/logic/: lobby.c
src/Doxy/: BotProject.cfg  run_doxygen.sh
src/ServerProject/: CMakeLists.txt  handlers.c  main.c  socket.c
src/ServerProject/logic/: joueur.h  lobby.h  stats.h
src/ServerProject/template/: generate_pdf.sh
src/Shared/: utils.c  utils.h
src/Shared/messaging/: enums.h  srv_handlers.h
src/Shared/socket/: utils_io.c  utils_io.h
